<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/relativeLayout"
  >
    <ImageView android:id="@+id/imageViewLargeIcon" 
    		   android:layout_width="wrap_content" 
    		   android:layout_height="wrap_content" 
    		   android:src="@drawable/nsr_icon_large" 
    		   android:layout_alignParentLeft="true"
    		   android:layout_alignParentTop="true"
    		   android:layout_alignParentRight="true"
    		   android:layout_alignParentBottom="true"
    		   android:contentDescription="@string/player_background_description"
    		   >
    </ImageView>
    <TableLayout android:layout_width="fill_parent"
    			  android:layout_height="wrap_content"
    			  android:layout_alignParentTop="true"
    			  android:layout_alignParentLeft="true"
    			  android:layout_alignParentRight="true"
    			  android:stretchColumns="0,1"
    			  android:padding="0dp"
    			  >
    	<TableRow>
		    <Button android:id="@+id/buttonPodcast"
		    		android:layout_height="wrap_content"
		    		android:layout_width="wrap_content"
		    		android:text="@string/player_button_podcasts"
		    		android:background="@drawable/button_basic"
		    		android:layout_marginRight="5dp"
		    		android:paddingTop="20dp"
		    		android:paddingBottom="20dp"
		 	/>
		    <Button	android:layout_height="wrap_content"
		    		android:layout_width="wrap_content"
		    		android:id="@+id/buttonHistory"
		    		android:text="@string/player_button_history"
		    		android:background="@drawable/button_basic"
		    		android:layout_marginLeft="5dp"
		    		android:paddingTop="20dp"
		    		android:paddingBottom="20dp"
		 	/>
		</TableRow>
    </TableLayout>
    <TableLayout android:layout_width="fill_parent"
    			  android:layout_height="wrap_content"
    			  android:layout_alignParentBottom="true"
    			  android:layout_alignParentLeft="true"
    			  android:layout_alignParentRight="true"
    			  android:stretchColumns="0,1"
    			  android:padding="0dp"
    			  >
   		<TableRow>
   			<TextView android:id="@+id/appTxtArtist" 
   					  android:layout_width="fill_parent"
   					  android:layout_height="wrap_content"
 					  android:layout_span="2"
   					  android:background="@drawable/textfield_basic"
   					  android:textColor="#000000"
   					  android:padding="10dp"
   					  android:layout_marginBottom="5dp"
   					  />
   		</TableRow>
   		<TableRow>
   			<TextView android:id="@+id/appTxtTitle" 
   					  android:layout_width="fill_parent"
   					  android:layout_height="wrap_content"
 					  android:layout_span="2"
   					  android:background="@drawable/textfield_basic"
   					  android:textColor="#000000"
   					  android:padding="10dp"
   					  android:layout_marginTop="5dp"
   					  android:layout_marginBottom="10dp"
   					  />
   		</TableRow>
 		<TableRow>
 			<ProgressBar android:id="@+id/progressBar"
 					 	 android:layout_width="fill_parent"
 						 android:layout_height="40dp"
 						 style="@android:style/Widget.ProgressBar.Horizontal"
 						 android:layout_span="2"
		    			 android:layout_marginBottom="10dp"
		    			 android:progressDrawable="@drawable/progress_basic"
 						 />
 		</TableRow>
    	<TableRow>
		    <Button android:id="@+id/buttonStart"
		    		android:layout_height="wrap_content"
		    		android:layout_width="wrap_content"
		    		android:text="@string/player_button_play"
		    		android:background="@drawable/button_basic"
		    		android:layout_marginRight="5dp"
		    		android:paddingTop="20dp"
		    		android:paddingBottom="20dp"
		    />
		    <Button android:id="@+id/buttonStop" 
				    android:layout_height="wrap_content" 
				    android:layout_width="wrap_content" 
				    android:text="@string/player_button_stop" 
		    		android:background="@drawable/button_basic"
		    		android:layout_marginLeft="5dp"
		    		android:paddingTop="20dp"
		    		android:paddingBottom="20dp"
			/>
		</TableRow>
    </TableLayout>
</RelativeLayout>
